# project50

./: Cargo.toml  README.md  build.rs
example_headers/: BuildSystem.h  CXCompilationDatabase.h  CXErrorCode.h  CXString.h  Documentation.h  FatalErrorHandler.h  Index.h  Platform.h  Rewrite.h
src/: collector.rs  lib.rs  main.rs  matcher.rs
