[package]
name = "coogle_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tree-sitter = "0.22.5"
# tree-sitter-c = "0.21.4"
# cc = "1.0.73"
clang-sys = "1.8.1"
strsim = "0.11.1"
nom = "7.1.3"
regex = "1.10.6"
ratatui = "0.28.1"

[build-dependencies]
cc = "1.0.73"
